# pynsted

./: .gitignore  .pylintrc  Makefile  pyproject.toml
pynsted/: prism.py
tests/: test_prism.py  test_pynsted.py
