[tool.poetry]
name = "pysted"
version = "0.1.0"
description = ""
authors = ["Alexey Vyskubov <alexey@ocaml.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipython = "^8.26.0"
mypy = "^1.10.1"
pylint = "^3.2.5"
pyright = "^1.1.370"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-socket = "^0.7.0"
pytest-xdist = "^3.6.1"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/**/*"]
